# RF_com

./: .gitmodules  README.md  receiver_code2.ino.ino
IR Stepper/: IR_STEPPER.ino  ir_stepper_smallsteps.ino
ir_stepper_smallsteps/: ir_stepper_smallsteps.ino
linux_receiver/: CMakeLists.txt  SCHEMA.sql  config.example  grafana_dashboard.json  main.cpp
receiver_code/: receiver_code.ino  receiver_code2.ino
receiver_code2/: receiver_code2.ino
transmitter_code/: transmitter.fzz  transmitter_code.ino  transmitter_code2.ino
transmitter_code2/: transmitter_code2.ino
voltage_indicator/: voltage_indicator.ino
